<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fufel"
            android:textColor="#CD6600"
            android:textAppearance="?android:attr/textAppearanceLarge" />

       <Button
           android:id="@+id/button1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item1" />
       
       <Button
           android:id="@+id/button2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="64dp"
           android:textColor="#CD6600"
           android:text="@string/item2" />
       
       <Button
           android:id="@+id/button3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item3" />
       
       <Button
           android:id="@+id/button4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item4" />
       
       <Button
           android:id="@+id/button5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item5" />
       
       <Button
           android:id="@+id/button6"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item6" />
       
       <Button
           android:id="@+id/button7"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item7" />
       
       <Button
           android:id="@+id/button8"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
          android:text="@string/item8" />
       
       <Button
           android:id="@+id/button9"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxHeight="80dp"
           android:minHeight="80dp"
           android:textColor="#CD6600"
           android:text="@string/item9" />
        
    </LinearLayout>

</ScrollView>
